force-app/main/default/objects/Account/fields/RegimenFiscal__c.field-meta.xml
<CustomField>
    <fullName>RegimenFiscal__c</fullName>
    <description>Tipo de regimen fiscal de la cuenta</description>
    <label>Regímen Fiscal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>601</fullName>
                <label>General de Ley Personales Morales</label>
            </value>
            <value>
                <fullName>603</fullName>
                <label>Personas Morales con fines no lucrativos</label>
            </value>
            <value>
                <fullName>605</fullName>
                <label>Sueldos y Salarios e ingresos Asimilados a Salarios</label>
            </value>
            <value>
                <fullName>606</fullName>
                <label>Arrendamiento</label>
            </value>
            <value>
                <fullName>607</fullName>
                <label>Régimen de Enajenación o Adquisición de Bienes</label>
            </value>
            <value>
                <fullName>608</fullName>
                <label>Demás Ingresos</label>
            </value>
            <value>
                <fullName>610</fullName>
                <label>Residentes en el Extranjero Sin Establecimiento Permanente en México</label>
            </value>
            <value>
                <fullName>611</fullName>
                <label>Ingresos por Dividendos (Socios y Accionistas)</label>
            </value>
            <value>
                <fullName>612</fullName>
                <label>Personas Físicas con Actividades Empresariales y Profesionales</label>
            </value>
            <value>
                <fullName>614</fullName>
                <label>Ingresos por intereses</label>
            </value>
            <value>
                <fullName>615</fullName>
                <label>Régimen de los ingresos por obtención de premios</label>
            </value>
            <value>
                <fullName>616</fullName>
                <label>Sin obligaciones fiscales</label>
            </value>
            <value>
                <fullName>620</fullName>
                <label>Sociedad Cooperativas de Producción que optan por diferir sus ingresos</label>
            </value>
            <value>
                <fullName>621</fullName>
                <label>Incorporación Fiscal</label>
            </value>
            <value>
                <fullName>622</fullName>
                <label>Actividades Agrícolas, Ganaderas, Silvícolas y Pesqueras</label>
            </value>
            <value>
                <fullName>623</fullName>
                <label>Opcional para Grupos de Sociedades</label>
            </value>
            <value>
                <fullName>624</fullName>
                <label>Coordinados</label>
            </value>
            <value>
                <fullName>625</fullName>
                <label>Régimen de las Actividades Empresariales con Ingresos a través de Plataformas Tecnológicas</label>
            </value>
            <value>
                <fullName>626</fullName>
                <label>Régimen Simplificado de Confianza</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>