force-app/main/default/objects/Account/fields/Requiereaprobacion__c.field-meta.xml
<CustomField>
    <fullName>Requiereaprobacion__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Marque este campo para solicitar el alta de clientes</inlineHelpText>
    <label>¿Requiere Alta?</label>
    <type>Checkbox</type>
</CustomField>