force-app/main/default/objects/Account/fields/Revisado__c.field-meta.xml
<CustomField>
    <fullName>Revisado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Revisado</label>
    <type>Checkbox</type>
</CustomField>