force-app/main/default/objects/Account/fields/RFC__c.field-meta.xml
<CustomField>
    <fullName>RFC__c</fullName>
    <description>RFC del cliente, para persona física 12 dígitos y para moral 13</description>
    <label>RFC</label>
    <length>13</length>
    <type>Text</type>
</CustomField>