force-app/main/default/objects/Account/fields/Seguimiento__c.field-meta.xml
<CustomField>
    <fullName>Seguimiento__c</fullName>
    <label>Seguimiento</label>
    <type>TextArea</type>
</CustomField>