force-app/main/default/objects/Account/fields/Solicitud_de_Credito__c.field-meta.xml
<CustomField>
    <fullName>Solicitud_de_Credito__c</fullName>
    <description>Permite elegir un alta de crédito para el cliente</description>
    <label>Solicitud de Crédito</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alta de Crédito</fullName>
            </value>
            <value>
                <fullName>Aumento de Crédito</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>