force-app/main/default/objects/Account/fields/Solicitud_Vacia__c.field-meta.xml
<CustomField>
    <fullName>Solicitud_Vacia__c</fullName>
    <formula>ISBLANK( Detalle_de_la_Solicitud_de_Autorizaci_n__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Solicitud Vacia</label>
    <type>Checkbox</type>
</CustomField>