force-app/main/default/objects/Account/fields/Test_Geolocalizaci_n_del__c.field-meta.xml
<CustomField>
    <fullName>Test_Geolocalizaci_n_del__c</fullName>
    <label>Test Geolocalización</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>