force-app/main/default/objects/Account/fields/Tipo_de_persona__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_persona__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Marque es opción solo si la persona es física</inlineHelpText>
    <label>¿Es persona física?</label>
    <type>Checkbox</type>
</CustomField>