force-app/main/default/objects/Account/fields/Tipo_de_Solicitud__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Solicitud__c</fullName>
    <label>Tipo de Solicitud</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alta de Cliente</fullName>
                <default>true</default>
                <label>Alta de Cliente</label>
            </value>
            <value>
                <fullName>Extensión de Cliente</fullName>
            </value>
            <value>
                <fullName>Reactivación del cliente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>