force-app/main/default/objects/Account/fields/Vendedor__c.field-meta.xml
<CustomField>
    <fullName>Vendedor__c</fullName>
    <description>Lista de selección de vendedor</description>
    <label>Vendedor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>001</fullName>
                <label>Metropolitan</label>
            </value>
            <value>
                <fullName>002</fullName>
                <label>Centro</label>
            </value>
            <value>
                <fullName>003</fullName>
                <label>Centro-Bajio</label>
            </value>
            <value>
                <fullName>004</fullName>
                <label>Sureste</label>
            </value>
            <value>
                <fullName>005</fullName>
                <label>Norte</label>
            </value>
            <value>
                <fullName>006</fullName>
                <label>Pacifico</label>
            </value>
            <value>
                <fullName>007</fullName>
                <label>Frontera</label>
            </value>
            <value>
                <fullName>100</fullName>
                <label>GTE NAL OBR Y PROY</label>
            </value>
            <value>
                <fullName>101</fullName>
                <label>GTE TEC REG CENTRO</label>
            </value>
            <value>
                <fullName>102</fullName>
                <label>ATO CENTRO 1-1</label>
            </value>
            <value>
                <fullName>103</fullName>
                <label>ATO CENTRO 1-2</label>
            </value>
            <value>
                <fullName>104</fullName>
                <label>ATO CENTRO 1-3</label>
            </value>
            <value>
                <fullName>105</fullName>
                <label>ATO CENTRO 1-4</label>
            </value>
            <value>
                <fullName>106</fullName>
                <label>ATO CENTRO 1-5</label>
            </value>
            <value>
                <fullName>107</fullName>
                <label>ATO CENTRO 1-6</label>
            </value>
            <value>
                <fullName>108</fullName>
                <label>ATO CENTRO 1-7</label>
            </value>
            <value>
                <fullName>109</fullName>
                <label>ATO CENTRO 3-1</label>
            </value>
            <value>
                <fullName>110</fullName>
                <label>ATO CENTRO 3-2</label>
            </value>
            <value>
                <fullName>111</fullName>
                <label>ATO CENTRO 6-1</label>
            </value>
            <value>
                <fullName>112</fullName>
                <label>ATO CENTRO 6-2</label>
            </value>
            <value>
                <fullName>113</fullName>
                <label>GTE TEC REG SUR</label>
            </value>
            <value>
                <fullName>114</fullName>
                <label>ATO SUR 2-1</label>
            </value>
            <value>
                <fullName>115</fullName>
                <label>ATO SUR 2-2</label>
            </value>
            <value>
                <fullName>116</fullName>
                <label>ATO SUR 2-3</label>
            </value>
            <value>
                <fullName>117</fullName>
                <label>ATO SUR 2-4</label>
            </value>
            <value>
                <fullName>118</fullName>
                <label>GTE TEC REG NORTE</label>
            </value>
            <value>
                <fullName>119</fullName>
                <label>ATO NORTE 4-1</label>
            </value>
            <value>
                <fullName>120</fullName>
                <label>ATO NORTE 4-2</label>
            </value>
            <value>
                <fullName>121</fullName>
                <label>ATO NORTE 4-3</label>
            </value>
            <value>
                <fullName>122</fullName>
                <label>ATO NORTE 5-1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>