force-app/main/default/objects/Account/fields/zona_de_ventas__c.field-meta.xml
<CustomField>
    <fullName>zona_de_ventas__c</fullName>
    <description>Lista de selección de la zona de ventas</description>
    <label>Zona de ventas</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>000001</fullName>
                <label>Zona Metropolitana</label>
            </value>
            <value>
                <fullName>000002</fullName>
                <label>Zona Centro</label>
            </value>
            <value>
                <fullName>000003</fullName>
                <label>Zona Centro Bajío</label>
            </value>
            <value>
                <fullName>000004</fullName>
                <label>Zona Sureste</label>
            </value>
            <value>
                <fullName>000005</fullName>
                <label>Zona Norte</label>
            </value>
            <value>
                <fullName>000006</fullName>
                <label>Zona Pacifico</label>
            </value>
            <value>
                <fullName>000007</fullName>
                <label>Zona Frontera</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>