force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>id_de_sap__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>clave_delcanal__c</columns>
    <columns>grupo__c</columns>
    <columns>centro_suministrador__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Todas las Cuentas</label>
</ListView>