force-app/main/default/objects/Account/listViews/MyAccounts.listView-meta.xml
<ListView>
    <fullName>MyAccounts</fullName>
    <columns>id_de_sap__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>clave_delcanal__c</columns>
    <columns>grupo__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>Equipo__c</columns>
    <filterScope>Mine</filterScope>
    <label>Mis Cuentas</label>
</ListView>